`feat: creation hierarchy`

--- a/cotalog.html
+++ b/cotalog.html
@@ -15,14 +15,14 @@
 
         <input type="text" id="search" placeholder="Поиск товаров">
 
-        <select id="sort">
+        <label for="sort"></label><select id="sort">
             <option value="default">Сортировать по</option>
             <option value="name">По имени</option>
             <option value="price">По цене</option>
             <option value="rating">По рейтингу</option>
         </select>
 
-        <select id="sortCategory">
+        <label for="sortCategory"></label><select id="sortCategory">
             <option value="default">Рейтинг</option>
             <option value="4,6">Рейтинг 4.6</option>
             <option value="4,7">Рейтинг 4.7</option>
@@ -50,291 +50,12 @@
     <widget-footer></widget-footer>
 </footer>
 <script>
-    const catalog = document.getElementById('catalog');
-    const search = document.getElementById('search');
-    const sort = document.getElementById('sort');
-    const sortCategory = document.getElementById('sortCategory');
-    const reset = document.getElementById('reset');
-
-    let products = [];
-    let currentProducts = [];
-    let favorites = [];
-    let cartItems = [];
-
-    const API_URL = 'http://localhost:3000/services';
-    const FAVORITES_URL = 'http://localhost:3000/favorites';
-    const CART_URL = 'http://localhost:3000/cart';
-
-    function renderCatalog(items) {
-        catalog.innerHTML = '';
-
-        if (!items || items.length === 0) {
-            catalog.innerHTML = "<p class='error'>Товары не найдены</p>";
-            return;
-        }
-
-        items.forEach(item => {
-            const isFavorite = favorites.includes(item.id);
-            const inCart = cartItems.includes(item.id);
-
-            const productElement = document.createElement('div');
-            productElement.className = 'catalog-cart';
-            productElement.innerHTML = `
-                <img src="${item.image}" alt="product" class="catalog-cart__img">
-                <div class="catalog-cart__text-wrapper">
-                    <p class="catalog-cart__name">${item.name}</p>
-                    <div style="display: flex; flex-direction: column; gap: 10px;">
-                        <p class="catalog-cart__price">${item.price}руб</p>
-                        <p class="catalog-cart__price">Рейтинг: ${item.rating}</p>
-                    </div>
-                </div>
-                <p class="catalog-cart__description">${item.description}</p>
-                <div class="catalog-cart__buttons">
-                    <button class="btn-catalog ${isFavorite ? 'active' : ''}">
-                        ${isFavorite ? 'Убрать из избранного' : 'В избранное'}
-                    </button>
-                    <button class="btn-catalog ${inCart ? 'active' : ''}">
-                        ${inCart ? 'Убрать из корзины' : 'В корзину'}
-                    </button>
-                </div>
-            `;
-
-            const favoriteBtn = productElement.querySelector('.btn-catalog:first-child');
-            const cartBtn = productElement.querySelector('.btn-catalog:last-child');
-
-            favoriteBtn.addEventListener('click', () => toggleFavorite(item.id, favoriteBtn));
-            cartBtn.addEventListener('click', () => toggleCart(item.id, cartBtn));
-
-            catalog.appendChild(productElement);
-        });
-    }
-
-    // Загрузка данных
-    async function loadProducts() {
-        try {
-            const response = await fetch(API_URL);
-            products = await response.json();
-            currentProducts = [...products];
-            renderCatalog(currentProducts);
-
-            const favResponse = await fetch(FAVORITES_URL);
-            favorites = (await favResponse.json()).map(item => item.productId);
-
-            const cartResponse = await fetch(CART_URL);
-            cartItems = (await cartResponse.json()).map(item => item.productId);
-        } catch (error) {
-            console.error('Ошибка загрузки данных:', error);
-        }
-    }
-
-    // Поиск товаров
-    search.addEventListener('input', (e) => {
-        const value = e.target.value.toLowerCase().trim();
-
-        if (value === '') {
-            currentProducts = [...products];
-        } else {
-            currentProducts = products.filter(p =>
-                p.name.toLowerCase().includes(value) ||
-                p.description.toLowerCase().includes(value)
-            );
-        }
-
-        renderCatalog(currentProducts);
-    });
-
-    // Сортировка
-    sort.addEventListener('change', (e) => {
-        const value = e.target.value;
-
-        if (value === 'default') {
-            currentProducts = [...products];
-        } else {
-            currentProducts = [...currentProducts].sort((a, b) => {
-                if (value === 'name') return a.name.localeCompare(b.name);
-                if (value === 'price') return b.price - a.price;
-                if (value === 'rating') return b.rating - a.rating;
-                return 0;
-            });
-        }
-
-        renderCatalog(currentProducts);
-    });
-
-    // Фильтрация по рейтингу
-    sortCategory.addEventListener('change', function() {
-        const selectedRating = this.value;
-
-        if (selectedRating === "default") {
-            currentProducts = [...products];
-        } else {
-            const targetRating = parseFloat(selectedRating.replace(',', '.'));
-            currentProducts = products.filter(product => {
-                const productRating = typeof product.rating === 'string'
-                    ? parseFloat(product.rating.replace(',', '.'))
-                    : product.rating;
-                return productRating === targetRating;
-            });
-        }
-
-        renderCatalog(currentProducts);
-    });
-
-    // Сброс фильтров
-    reset.addEventListener('click', () => {
-        search.value = '';
-        sort.value = 'default';
-        sortCategory.value = 'default';
-        currentProducts = [...products];
-        renderCatalog(currentProducts);
-    });
-
-    // Методы массивов
-    function applyMethod(method) {
-        try {
-            const methodHandlers = {
-                map: handleMap,
-                filter: handleFilter,
-                reduce: handleReduce,
-                reverse: handleReverse,
-                every: handleEvery,
-                find: handleFind,
-                top10: handleTop10,
-                a_names: handleANames
-            };
-
-            if (methodHandlers[method]) {
-                methodHandlers[method]();
-            }
-        } catch (error) {
-            console.error('Ошибка при применении метода:', error);
-        }
-    }
-
-    function handleMap() {
-        currentProducts = currentProducts.map(p => ({
-            ...p,
-            name: `Товар: ${p.name}`
-        }));
-        renderCatalog(currentProducts);
-    }
-
-    function handleFilter() {
-        currentProducts = currentProducts.filter(p => p.price > 30000);
-        renderCatalog(currentProducts);
-    }
-
-    function handleReduce() {
-        const total = currentProducts.reduce((sum, p) => sum + p.price, 0);
-        alert(`Общая стоимость: ${total} руб.`);
-    }
-
-    function handleReverse() {
-        currentProducts = [...currentProducts].reverse();
-        renderCatalog(currentProducts);
-    }
-
-    function handleEvery() {
-        const allExpensive = currentProducts.every(p => p.price > 40000);
-        alert(allExpensive ? 'Все товары > 40000 руб.' : 'Есть товары ≤ 40000 руб.');
-    }
-
-    function handleFind() {
-        const foundProduct = currentProducts.find(p => p.price > 45000);
-        alert(foundProduct ? `Найден: ${foundProduct.name}` : 'Товар не найден');
-    }
-
-    function handleTop10() {
-        currentProducts = [...products]
-            .sort((a, b) => b.price - a.price)
-            .slice(0, 10);
-        renderCatalog(currentProducts);
-    }
-
-    function handleANames() {
-        currentProducts = products.filter(p =>
-            p.name.toLowerCase().startsWith('а')
-        );
-        renderCatalog(currentProducts);
-    }
-
-    // Работа с избранным и корзиной
-    async function toggleFavorite(productId, button) {
-        try {
-            const checkResponse = await fetch(`${FAVORITES_URL}?productId=${productId}`);
-            const existing = await checkResponse.json();
-
-            if (existing.length > 0) {
-                // Удаление
-                await fetch(`${FAVORITES_URL}/${existing[0].id}`, {
-                    method: 'DELETE'
-                });
-                favorites = favorites.filter(id => id !== productId);
-                button.textContent = 'В избранное';
-                button.classList.remove('active');
-            } else {
-                // Добавление
-                const product = products.find(p => p.id === productId);
-                await fetch(FAVORITES_URL, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        productId: product.id,
-                        name: product.name,
-                        price: product.price,
-                        image: product.image,
-                        addedAt: new Date().toISOString()
-                    })
-                });
-                favorites.push(productId);
-                button.textContent = 'Убрать из избранного';
-                button.classList.add('active');
-            }
-        } catch (error) {
-            console.error('Ошибка при работе с избранным:', error);
-        }
-    }
-
-    async function toggleCart(productId, button) {
-        try {
-            const checkResponse = await fetch(`${CART_URL}?productId=${productId}`);
-            const existing = await checkResponse.json();
-
-            if (existing.length > 0) {
-                // Удаление
-                await fetch(`${CART_URL}/${existing[0].id}`, {
-                    method: 'DELETE'
-                });
-                cartItems = cartItems.filter(id => id !== productId);
-                button.textContent = 'В корзину';
-                button.classList.remove('active');
-            } else {
-                // Добавление
-                const product = products.find(p => p.id === productId);
-                await fetch(CART_URL, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        productId: product.id,
-                        name: product.name,
-                        price: product.price,
-                        image: product.image,
-                        addedAt: new Date().toISOString(),
-                        quantity: 1
-                    })
-                });
-                cartItems.push(productId);
-                button.textContent = 'Убрать из корзины';
-                button.classList.add('active');
-            }
-        } catch (error) {
-            console.error('Ошибка при работе с корзиной:', error);
-        }
-    }
-
-    document.addEventListener('DOMContentLoaded', loadProducts);
-
 </script>
+<script src="cotalog/api.js"></script>
+<script src="cotalog/cart.js"></script>
+<script src="cotalog/favorite.js"></script>
+<script src="cotalog/catalog.js"></script>
+<script src="cotalog/method.js"></script>
 <script src="assert/js/component-header.js"></script>
 <script src="assert/js/component-footer.js"></script>
 </body>
