--- a/cotalog.html
+++ b/cotalog.html
@@ -11,38 +11,59 @@
 </header>
 <main class="main">
     <div class="main-container">
+
+        <div class="navigation-buttons">
+            <button id="btnCatalog" class="nav-btn active"><a href="cart.html">Каталог</a></button>
+            <button id="btnFavorites" class="nav-btn"><a href="favorite.html">Избранное</a></button>
+        </div>
         <p class="main-container-text">Каталог</p>
 
         <input type="text" id="search" placeholder="Поиск товаров">
 
-        <label for="sort"></label><select id="sort">
+        <div class="price-filter">
+            <p class="main-container-text">Цена:</p>
+            <input type="number" id="minPrice" placeholder="От" min="0">
+            <p>-</p>
+            <input type="number" id="maxPrice" placeholder="До" min="0">
+        </div>
+
+        <label for="sort"></label>
+        <select id="sort">
             <option value="default">Сортировать по</option>
             <option value="name">По имени</option>
             <option value="price">По цене</option>
             <option value="rating">По рейтингу</option>
         </select>
 
-        <label for="sortCategory"></label><select id="sortCategory">
-            <option value="default">Рейтинг</option>
-            <option value="4,6">Рейтинг 4.6</option>
-            <option value="4,7">Рейтинг 4.7</option>
-            <option value="4,8">Рейтинг 4.8</option>
+        <label for="sortCategory"></label>
+        <select id="sortCategory">
+            <option value="default">Все категории</option>
+            <option value="SMM">SMM</option>
+            <option value="Медиа">Медиа</option>
+            <option value="Реклама">Реклама</option>
+            <option value="Радио">Радио</option>
+            <option value="Видео">Видео</option>
+            <option value="Аудио">Аудио</option>
+            <option value="PR">PR</option>
+            <option value="Стриминг">Стриминг</option>
+            <option value="Ивенты">Ивенты</option>
+            <option value="Сети">Сети</option>
+            <option value="Контент">Контент</option>
+            <option value="Аналитика">Аналитика</option>
         </select>
 
         <div id="categories"></div>
-
         <div id="catalog" class="catalog"></div>
+        <div id="pagination" class="pagination"></div>
 
         <div id="buttons">
             <button id="reset" class="btn">Сбросить фильтры</button>
-            <button onclick="applyMethod('map')" class="btn">Изменить названия</button>
-            <button onclick="applyMethod('filter')" class="btn">Фильтр по цене > 30000</button>
-            <button onclick="applyMethod('reduce')" class="btn">Общая стоимость</button>
-            <button onclick="applyMethod('reverse')" class="btn">Обратный порядок</button>
-            <button onclick="applyMethod('every')" class="btn">Все товары > 40000</button>
-            <button onclick="applyMethod('find')" class="btn">Найти первый товар > 45000</button>
-            <button onclick="applyMethod('top10')" class="btn">Топ 10 дорогих</button>
-            <button onclick="applyMethod('a_names')" class="btn">Имя начинается с "А"</button>
+            <button id="btnFilter" class="btn">Фильтр по цене > 300</button>
+            <button id="btnReduce" class="btn">Общая стоимость</button>
+            <button id="btnEvery" class="btn">Все товары > 400</button>
+            <button id="btnFind" class="btn">Найти первый товар > 450</button>
+            <button id="btnTop3" class="btn">Топ 3 дешевых</button>
+            <button id="btnANames" class="btn">Имя начинается с "П"</button>
         </div>
     </div>
 </main>
@@ -51,11 +72,14 @@
 </footer>
 <script>
 </script>
+
+<script src="cotalog/pagination.js"></script>
 <script src="cotalog/api.js"></script>
 <script src="cotalog/cart.js"></script>
 <script src="cotalog/favorite.js"></script>
 <script src="cotalog/catalog.js"></script>
 <script src="cotalog/method.js"></script>
+
 <script src="assert/js/component-header.js"></script>
 <script src="assert/js/component-footer.js"></script>
 </body>
