`feat: add pagination, favorites, cart`

--- a/favorite.html
+++ b/favorite.html
@@ -11,7 +11,7 @@
 </header>
 
 <section class="favorites-section">
-    <h2 class="favorites-title">Ваша корзина</h2>
+    <h2 class="favorites-title">Избранное</h2>
     <div class="cartContainer" id="favoritesContainer">
     </div>
     </section>
