`feat: add logic users`

--- a/reg/index.html
+++ b/reg/index.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="form-box register">
-            <form action="#" class="form-box-register">
+            <form action="#" class="form-box-register"  id="registrationForm">
                 <p class="form-box-logo">Registration</p>
                 <div class="input-box">
                     <input type="text" class="input-login" placeholder="First Name*" required>
@@ -97,7 +97,7 @@
                             quae sapiente soluta suscipit veritatis.</p>
                     </div>
                 </div>
-                <button type="submit" class="btn" id="registrationForm">Register</button>
+                <button type="submit" class="btn">Register</button>
             </form>
         </div>
 
