`feat: add admin, feedback and so on `

--- a/catalog/index.html
+++ b/catalog/index.html
@@ -13,7 +13,7 @@
     <div class="main-container">
 
         <div class="navigation-buttons">
-            <button id="btnCatalog" class="nav-btn active"><a href="../cart/index.html">Каталог</a></button>
+            <button id="btnCatalog" class="nav-btn active"><a href="../cart/index.html">Карзина</a></button>
             <button id="btnFavorites" class="nav-btn"><a href="favorite/index.html">Избранное</a></button>
         </div>
         <p class="main-container-text">Каталог</p>
