--- a/feedback/index.html
+++ b/feedback/index.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="../src/css/feedback.css">
 </head>
 <body>
+<div id="preloader">
+  <div class="loader"></div>
+</div>
+
 <header class="header">
   <widget-header></widget-header>
 </header>
